src/assets/stylesheets/index.scss
/* ... */
.bg-primary:after {
  background: var(--bs-primary);
}
.card-extended.bg-secondary:after {
  background: var(--bs-secondary);
}

//-- card-img-extended --//

.card.card-img-extended {
  overflow: visible;
}

.card-img-extended {
  position: relative;
  background-position: center center;
  background-size: cover;
  background-repeat: no-repeat;
  background: inherit;
}

.card-img-extended:before {
  content: '';
  position: absolute;
  top: 0;
  bottom: 0;
  background: inherit;
  background-size: cover;
  background: inherit;
}

.row [class*='col']:first-child .card-img-extended.card-extended:before {
  right: 0;
  left: -2600px;
}
.row [class*='col']:last-child .card-img-extended.card-extended:before {
  left: 0;
  right: -2600px;
}
.row [class*='col']:only-child .card-img-extended.card-extended:before {
  left: 0;
  right: 0;
}

.card-img-extended.card-extended {
  background: inherit;
}
.bg-primary,
.bg-secondary,
.bg-dark-grey,
.bg-middle-grey,
.bg-light-grey,
.bg-success,
.bg-warning,
.bg-danger,
.bg-info,
.bg-white {
  &.card-img-extended.card-extended:before {
    opacity: 0.2;
    filter: grayscale(0.8), blur(0px);
  }
}

// -- non transparent image for full height box  -- //

.img-box {
  object-fit: cover;
  width: 100%;
  height: 100%;
  object-position: center;
  position: absolute;
  left: 0;
  top: 0;
  transition: all 1.5s;
  z-index: -1;
}
@media (max-width: 991px) {
  .img-box {
    position: static;
  }
}

.img-box.img-h-200 {
  position: static;
  height: 200px;
}
.img-box.img-h-100 {
  position: static;
  height: 100px;
}
.img-box.img-h-50 {
  position: static;
  height: 50px;
}

// -- editor -- //

.editor {
  position: relative;
  display: inline-block;
  width: 1.75rem;
  height: 1.75rem;
  border-radius: 50%;
}
.editor-large {
  width: 5.75rem;
  height: 5.75rem;
}
.editor-img {
  max-width: 100%;
  object-fit: cover;
  border-radius: var(--jr-border-radius);
  box-shadow: var(--jr-box-shadow);
}

.box-date {
  display: block;
  width: 60px;
  height: 60px;
  background: var(--bs-primary);
  color: #fff;
  border-radius: 50%;
  line-height: 60px;
  text-align: center;
  font-weight: 500;
}

//-- carousel & headline with background --//

.carousel-item {
  height: 400px;
}

.header-caption,
.carousel-caption {
  text-align: left;
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    margin: 0;
  }
  .h1,
  .h2,
  .h3,
  .h4,
  .h5,
  .h6 {
    span {
      padding: 10px 15px;
      margin: 3px 0;
    }
  }
}

// -- general badges -- //

.bg-middle-grey {
  color: var(--bs-secondary);
}

// -- general form-control -- //

.form-label {
  font-family: 'Fira Sans', sans-serif;
  color: var(--headline);
  margin-bottom: 0.5rem;
  font-size: 0.875rem;
}

.form-control {
  display: block;
  width: 100%;
  font-size: 0.9rem;
  font-weight: 500;
  line-height: 1.5;
  color: var(--bs-body-color);
  background-color: #fff;
  background-clip: padding-box;
  border: 0.0625rem solid rgba(33, 50, 91, 0.1);
  appearance: none;
  border-radius: var(--jr-border-radius);
  transition:
    border-color 0.15s ease-in-out,
    box-shadow 0.15s ease-in-out;
}
.form-select {
  font-size: 0.9rem;
}
.form-control:disabled {
  background: rgba(255, 255, 255, 0.65);
  cursor: not-allowed;
}

.form-control:focus {
  color: #1e2022;
  background-color: #fff;
  border-color: rgba(140, 152, 164, 0.25);
  outline: 0;
  box-shadow: 0 0 1rem 0 rgba(140, 152, 164, 0.25);
}

.form-switch {
  padding-left: 3em;
}
.form-check-input {
  margin-top: 0.4em;
}
.form-check-input:checked {
  background-color: var(--bs-primary);
  border-color: var(--bs-primary);
}

/* btn + alignment
 =================================================================== */

.btn:empty {
  min-width: 50px;
}
.btn:empty:after {
  content: '______';
  color: transparent;
}

.btn-block .btn {
  width: 100%;
}

.nav {
  --bs-nav-link-color: var(--bs-primary);
  --bs-nav-link-hover-color: var(--bs-dark);
}

/* slim-nav adaptions
 =================================================================== */

.slim-nav {
  &:after {
    display: none !important;
  }
  .navbar-brand {
    height: 55px;
    margin: 0;
    padding: 0 5px 0 0;
    box-shadow: none;
  }
  .navbar-brand-logo {
    max-width: 155px;
    min-height: 45px;
  }
  .navbar-meta .nav-link {
    padding: 17px;

    &:hover {
      background: rgba(0, 0, 0, 0.05);
    }
  }
  .navbar-meta .navbar-nav.me-auto .nav-link {
    font-size: 1rem;
    padding: 14px;
  }
}

@media (max-width: 991px) {
  .slim-nav {
    .navbar-brand {
      height: 45px;
    }
  }
}

/* navbar
 =================================================================== */

.dropdown-toggle:after {
  display: inline-block;
  font-style: normal;
  font-weight: 400 !important;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  vertical-align: -0.125em;
  font-family: bootstrap-icons !important;
  border: none;
  content: '\f282';
  margin-left: 0.6em;
  transition: transform 0.3s ease-in-out;
}
.dropdown-toggle.show:after {
  transform: rotate(-180deg);
}

.dropdown-item,
.nav-link {
  font-family: 'Fira Sans', sans-serif;
  font-weight: 500;
}

.navbar-brand {
  margin: 0 5px -10px 0;
  padding: 5px 15px;
  background: #fff;
  border-radius: 0 0 var(--jr-border-radius) var(--jr-border-radius);
  box-shadow: var(--jr-box-shadow);
  align-self: stretch;
  display: flex;
}

.navbar-brand-logo {
  margin: auto;
  max-width: 135px;
  min-height: 37px;
  object-fit: contain;
}
.navbar {
  padding: 0;
}
.navbar-nav.border-left .nav-item {
  border-left: 1px solid var(--border);
}
.navbar-nav.border-left .nav-item:first-child {
  border: none;
}
.navbar-collapse {
  display: flex;
  flex-flow: column;
  width: 100%;
}
.navbar-landing,
.navbar-meta,
.navbar-main {
  display: flex;
  width: 100%;
}
/* ... */

